# hackathon-test

./: .gitignore  ANALYTICS_CONSISTENCY_REPORT.md  DASHBOARD_README.md  Frontend.html  README.md  ai.py  analyze_video.py  config.yaml  dashboard_server.py  launch_dashboard.py  main.py  pyproject.toml  requirements.txt  run_dashboard.py  simple_analytics_check.py  start_dashboard.bat  start_dashboard.sh  test_dashboard_analytics.py  test_sports_analytics.py  visualization.py
config/: config.yaml
src/: __init__.py
src/analytics/: __init__.py  jersey_detector.py  sports_analyzer.py  team_identifier.py
src/api/: __init__.py  dashboard_server.py
src/core/: __init__.py  config.py  homography_manager.py
src/models/: __init__.py  object_tracker.py  segmentation_model.py
src/utils/: __init__.py  logging_utils.py  performance_utils.py  video_utils.py
static/: dashboard.css  dashboard.js
templates/: dashboard.html
tests/: final_analytics_verification.py  test_events_generation.py  test_sports_analytics.py  verify_analytics_consistency.py
