[project]
name = "hackathon-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/iMoonLab/yolov13" }
